# headshot-creator

./: .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.yaml  env.yaml  helper_methods.py  helper_methods_test.py  logger.py  main.py  pyproject.toml
headshot_creator/: detector.py  extractor.py  file.py  utils.py  utils_test.py
