[tool.poetry]
name = "headshot-creator"
version = "0.1.0"
description = "A headshot creator in Python"
authors = ["Chris Hunt <chris.hunt1977@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
mtcnn = "^0.1.1"
opencv-python = "^4.5.5"
fire = "^0.4.0"
matplotlib = "^3.5.2"
wget = "^3.2"
tensorflow-macos = "^2.9.0"
protobuf = "^3.20.0"


[tool.poetry.dev-dependencies]
pytest = "^6.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
