[project]
name = "headshot-creator"
version = "0.1.0"
description = "A headshot creator in Python"
authors = ["Chris Hunt <chris.hunt1977@gmail.com>"]
readme = "README.md"
requires-python = "==3.12.4"
dependencies = [
    "deepface>=0.0.93",
    "fire>=0.7.0",
    "matplotlib>=3.10.3",
    "mtcnn>=1.0.0",
    "opencv-python>=4.11.0.86",
    "tensorflow>=2.19.0",
    "tf-keras>=2.19.0",
    "wget>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
